--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/bitchat.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>BitChat Web - Decentralized Bluetooth Mesh Messaging</title>
+  <title>BlackChat - Decentralized Bluetooth Mesh Messaging</title>
   <meta name="description"
     content="Secure peer-to-peer messaging over Bluetooth mesh networks. No internet required, no servers, no phone numbers." />
 
